# cadmux_security

./: .dockerignore  Dockerfile  README.md  deploy_update.sh  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/core/: __init__.py  models.py  plugin_manager.py
app/plugins/: __init__.py  nmap_tool.py
app/static/: styles.css
app/templates/: base.html  forgot_password.html  index.html  login.html  register.html  reset_password.html
app/templates/emails/: verify_registration.html
tests/: test_nmap_parser.py  test_nmap_profiles.py  test_target_validation.py
