[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cadmux-security"
version = "0.1.0"
description = "Cadmux Security: extensible cybersecurity scanning platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "Flask==3.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
